0.19
- added constant P4A_FORCE_HANDHELD_RENDERING to force handheld rendering on any device (useful to have a handheld preview)

0.18
- updated rich text editor (FCKeditor 2.0 FC)

0.17
- done some PHP5 fixes, seems to work fine but we need more tests
- updated TODO
- created CREDITS file and moved credits from README
- updated some copyright informations
- fixed an error in CHANGELOG

0.16
- updated TODO
- disabled P4A_Sheets_Group and tabbed menu because they're not completed
- updated all copyright informations

0.15

- now p4a_message can handle messages without icons
- some language fixes in the "products_catalogue" application

0.14
- fixed a bug in P4A_Number::format, if null is passed, null is returned (not zero)
- added P4A_Message::autoClear() to enable/disable auto clearing of messages
- removed P4A_Label::setType() because it were formally uncorrect
- P4A now can handle file/image uploads within rich_textarea fields (disabled by default)
- added P4A_Field:enableFileUpload() and P4A_Field:enableImageUpload()

0.13
- various bugfix in P4A_Link
- updated caledar widget to 1.0
- added P4A_Table_Col::setOrderable() and P4A_Table_Col::isOrderable() to set and check the possibility to enable the "order by" on a column
- added the possibility to intercept the "beforeDisplay" event on P4A_Table

0.12
- added folder.png and folder_open.png images in 16x16 pixels icons
- updated rich text editor (FCKeditor 2.0 RC3)
- now P4A_Field::getAsLabel() correctly handle multiline content
- P4A_Widget now instance a "handheld" smarty variable, passed to the template
- now P4A_Field::getAsDate() correctly manage handheld devices
- added some copyright notes to array_source.php, db_source.php, collection.php, data_source.php
- removed multivalue_field.php because it was obsolete
- removed P4A_Mask::addMultivalueField() because it was obsolete