@@ -1,5 +1,7 @@
 0.19
 - added constant P4A_FORCE_HANDHELD_RENDERING to force handheld rendering on any device (useful to have a handheld preview)
+- handheld CSS now has a sans-serif font
+- handheld CSS now has a nice color for all the links
 
 0.18
 - updated rich text editor (FCKeditor 2.0 FC)
